implementando pages pacotes com filtros

--- a/src/app/components/packages-layout/packages-layout.component.html
+++ b/src/app/components/packages-layout/packages-layout.component.html
@@ -3,7 +3,7 @@
   <div class="container position-relative">
     <h1 class="display-4 fw-bold">Sua Próxima Aventura com ViaJava <i class="bi bi-airplane-engines"></i></h1>
     <p class="lead my-3">Onde cada viagem é uma nova versão da sua história.</p>
-    <a href="#packages-section" class="btn btn-orange">Ver Pacotes</a>
+    <a [routerLink]="['/packages']" class="btn btn-orange">Ver Pacotes</a>
   </div>
 </section>
 
