--- a/src/app/components/packages-layout/packages-layout.component.html
+++ b/src/app/components/packages-layout/packages-layout.component.html
@@ -1,11 +1,37 @@
 <section class="hero-section text-white text-center">
+  
+  <div class="carousel-background-slides">
+    <div 
+      *ngFor="let slide of carouselSlides; let i = index" 
+      class="slide-background" 
+      [class.active]="i === currentSlideIndex"
+      [style.backgroundImage]="'url(' + slide.imageUrl + ')'">
+    </div>
+  </div>
+
   <div class="hero-overlay"></div>
+
   <div class="container position-relative">
     <h1 class="display-4 fw-bold">Sua Próxima Aventura com ViaJava <i class="bi bi-airplane-engines"></i></h1>
     <p class="lead my-3">Onde cada viagem é uma nova versão da sua história.</p>
     <a [routerLink]="['/packages']" class="btn btn-orange">Ver Pacotes</a>
   </div>
+
+  <button class="carousel-control prev" (click)="prevSlide()">
+    <i class="bi bi-chevron-left"></i>
+  </button>
+  <button class="carousel-control next" (click)="nextSlide()">
+    <i class="bi bi-chevron-right"></i>
+  </button>
+  <div class="carousel-indicators">
+    <button *ngFor="let slide of carouselSlides; let i = index"
+            [class.active]="i === currentSlideIndex"
+            (click)="selectSlide(i)">
+    </button>
+  </div>
 </section>
+
+<section>
 
 <section class="container text-center my-5" id="packages-section">
   <h2 class="fw-bold">Pacotes de Viagem <i class="bi bi-luggage"></i></h2>
