--- a/src/app/pages/admin/admin-users/admin-users.component.html
+++ b/src/app/pages/admin/admin-users/admin-users.component.html
@@ -67,8 +67,8 @@
           <td>{{ user.role.userRole | titlecase }}</td>
           <td class="text-center">
             <div class="action-buttons">
-              <button (click)="editUser(user)"><i class="bi bi-pencil-square"></i></button>
-              <button (click)="deleteUser(user.id)"><i class="bi bi-trash"></i></button>
+              <button class="btn btn-warning" (click)="editUser(user)"><i class="bi bi-pencil-square"></i></button>
+              <button class="btn btn-danger" (click)="deleteUser(user.id)"><i class="bi bi-trash"></i></button>
             </div>
           </td>
         </tr>
