--- a/src/app/pages/admin/admin-packages/admin-packages.component.html
+++ b/src/app/pages/admin/admin-packages/admin-packages.component.html
@@ -18,7 +18,7 @@
   
   <div class="header-right">
     <button class="btn-primary" (click)="openAddModal()">
-      <i class="bi bi-plus-square"></i>Adicionar Pacote
+      Adicionar Pacote
     </button>
   </div>
 </div>
@@ -45,8 +45,9 @@
         <td>{{ pkg.price | currency:'BRL' }}</td>
         <td>{{ pkg.available ? 'Sim' : 'Não' }}</td>
         <td class="actions text-center">
-          <a [routerLink]="['/packages', pkg.id, 'admin']"><i class="bi bi-pencil-square"></i></a>
-          <a (click)="handleDeletePackage(pkg.id!)"><i class="bi bi-trash"></i></a>
+          <button class="btn btn-warning" (click)="navigateToEditPackage(pkg.id!)"><i class="bi bi-pencil-square"></i></button>
+          |
+          <button class="btn btn-danger" (click)="handleDeletePackage(pkg.id!)"><i class="bi bi-trash"></i></button>
         </td>
       </tr>
       <tr *ngIf="!isLoading && paginatedResponse.content.length === 0">
