--- a/src/app/components/package-list-item/package-list-item.component.html
+++ b/src/app/components/package-list-item/package-list-item.component.html
@@ -6,7 +6,13 @@
     <div class="card-body d-flex flex-column">
       <div>
         <h5 class="card-title">{{ pacote.title }}</h5>
-        <p class="card-text text-muted"><i class="bi bi-geo-alt-fill"></i> {{ pacote.destination }}</p>
+        <p class="card-text text-muted small">
+          <i class="bi bi-airplane-engines me-2"></i>{{ pacote.source }} → {{ pacote.destination }}
+        </p>
+        <p class="card-text text-muted small">
+          <i class="bi bi-calendar3 me-2"></i>{{ pacote.startDate | date:'dd/MM/yyyy' }} - {{ pacote.endDate |
+          date:'dd/MM/yyyy' }}
+        </p>
         <p class="card-text">{{ pacote.description | slice:0:150 }}...</p>
       </div>
       <div class="mt-auto d-flex justify-content-between align-items-center">
@@ -14,7 +20,8 @@
           <small>Preço por pessoa</small>
           <p class="price">{{ pacote.price | currency:'BRL' }}</p>
         </div>
-        <a [routerLink]="['/packages', pacote.id]" class="btn btn-outline-primary">Ver Mais <i class="bi bi-arrow-right"></i></a>
+        <a [routerLink]="['/packages', pacote.id]" class="btn btn-outline-orange">Ver Mais <i
+            class="bi bi-arrow-right"></i></a>
       </div>
     </div>
   </div>
