--- a/src/app/pages/packages-admin/packages-admin.component.html
+++ b/src/app/pages/packages-admin/packages-admin.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="upload-section">
       <input type="file" #fileInput hidden (change)="onFileSelected($event)" accept="image/png, image/jpeg">
-      <button type="button" class="btn btn-light" (click)="fileInput.click()">
+      <button type="button" class="btn btn-warning" (click)="fileInput.click()">
         {{ package?.imageUrl ? 'Trocar Imagem' : 'Adicionar Imagem' }}
       </button>
       <button *ngIf="selectedFile" type="button" class="btn btn-primary" (click)="onUploadImage()">
@@ -88,13 +88,13 @@
     <div class="actions-section">
       
       <div *ngIf="!isEditing" class="action-buttons">
-        <a routerLink="/admin/packages" class="btn btn-light">Voltar</a>
-        <button class="btn btn-secondary" (click)="enterEditMode()">Editar Informações</button>
+        <a routerLink="/admin/packages" class="btn btn-secondary">Voltar</a>
+        <button class="btn btn-warning" (click)="enterEditMode()">Editar Informações</button>
         <button class="btn btn-danger" (click)="onDelete()">Excluir Pacote</button>
       </div>
       <div *ngIf="isEditing" class="action-buttons">
-        <button class="btn btn-light" (click)="cancelEditMode()">Cancelar</button>
-        <button class="btn btn-primary" (click)="onSave()" [disabled]="packageForm.invalid">Salvar Alterações</button>
+        <button class="btn btn-secondary" (click)="cancelEditMode()">Cancelar</button>
+        <button class="btn btn-warning" (click)="onSave()" [disabled]="packageForm.invalid">Salvar Alterações</button>
       </div>
     </div>
   </div>
