--- a/src/app/pages/packages-admin/packages-admin.component.scss
+++ b/src/app/pages/packages-admin/packages-admin.component.scss
@@ -70,7 +70,7 @@
   margin-bottom: 24px;
 
   div {
-    background-color: #f8f9fa;
+    background-color: #00000018;
     padding: 12px;
     border-radius: 6px;
   }
@@ -114,6 +114,36 @@
     font-weight: 500;
     font-size: 0.9rem;
     color: #6c757d; // Cinza escuro para os rótulos
+  }
+
+  input,
+  textarea,
+  select {
+    width: 100%;
+    padding: 12px;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    font-size: 14px;
+    background-color: var(--primary-orange);
+    color: white;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    &:focus {
+      outline: none;
+      border-color: var(--dark-blue);
+      box-shadow: 0 0 0 3px rgba(228, 180, 138, 0.2);
+      background-color: var(--primary-orange);
+    }
+
+    &:disabled {
+      background-color: rgba(255, 179, 113, 0.5);
+      color: rgba(255, 255, 255, 0.6);
+      cursor: not-allowed;
+    }
   }
 }
 
