feat/ adicionando o tradutor no footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,9 +29,11 @@
           </svg>
         </a>
       </div>
-      <div class="about-link">
+         <div class="about-link">
         <a href="#" class="footer-link">Sobre Nós</a>
       </div>
+      <!-- WIDGET DO GOOGLE TRADUTOR VAI AQUI -->
+      <div id="google_translate_element_footer" class="ms-3"></div>
     </section>
 
   </section>
