fix/ajustes no scroll do chatbot

--- a/src/app/components/chatbot/chatbot.component.html
+++ b/src/app/components/chatbot/chatbot.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <!-- Messages -->
-  <div class="messages-container">
+  <div class="messages-container" #scrollMe>
     <app-message *ngFor="let message of messages" [message]="message"></app-message>
   </div>
 
