--- a/src/app/pages/admin/admin-reviews/admin-reviews.component.html
+++ b/src/app/pages/admin/admin-reviews/admin-reviews.component.html
@@ -5,7 +5,7 @@
 
   <div class="card shadow mb-4">
     <div class="card-header py-3">
-      <h6 class="m-0 font-weight-bold text-primary">Selecione um Pacote para Moderar</h6>
+      <h6 class="m-0 font-weight-bold text-orange">Selecione um Pacote para Moderar</h6>
     </div>
     <div class="card-body">
       <div class="form-group">
@@ -23,7 +23,7 @@
 
   <div class="card shadow mb-4" *ngIf="selectedPackageId">
     <div class="card-header py-3">
-      <h6 class="m-0 font-weight-bold text-primary">Avaliações do Pacote Selecionado</h6>
+      <h6 class="m-0 font-weight-bold text-orange">Avaliações do Pacote Selecionado</h6>
     </div>
     <div class="card-body">
       <div *ngIf="isLoadingReviews" class="text-center py-5">
