--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,7 +2,7 @@
   background-color: var(--dark-blue);
   color: white;
   padding: 20px;
-  margin-top: auto;
+  margin-top: 1rem;
   
   @media (max-width: 768px) {
     padding: 15px;
@@ -21,6 +21,7 @@
     flex-direction: column;
     gap: 15px;
     text-align: center;
+    margin-top: 1rem;
   }
 }
 
