--- a/src/app/pages/admin/admin-users/admin-users.component.html
+++ b/src/app/pages/admin/admin-users/admin-users.component.html
@@ -35,7 +35,7 @@
         </select>
       </div>
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="btn btn-warning">Salvar</button>
         <button type="button" (click)="cancelEdit()" class="btn btn-secondary">Cancelar</button>
       </div>
     </form>
