--- a/src/app/pages/admin/admin-users/admin-users.component.scss
+++ b/src/app/pages/admin/admin-users/admin-users.component.scss
@@ -164,6 +164,15 @@
   margin-top: 24px;
 }
 
+.btn-warning{
+  background-color: var(--primary-orange);
+  color: white;
+}
+
+.bi-pencil-square{
+  color: white;
+}
+
 .btn-pagination {
   background-color: #fff;
   border: 1px solid #dee2e6;
