--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="about-link">
-        <a href="#" class="footer-link">Sobre Nós</a>
+        <a href="#" class="footer-link" routerLink="/about">Sobre Nós</a>
       </div>
     </section>
 
