fix route path in admin layout

--- a/src/app/components/admin-layout/admin-layout.component.html
+++ b/src/app/components/admin-layout/admin-layout.component.html
@@ -22,13 +22,13 @@
           </a>
         </li>
         <li>
-          <a routerLink="avaliacoes" routerLinkActive="active-link">
+          <a routerLink="reviews" routerLinkActive="active-link">
            
             <img src="assets/icons/chat_ava.svg" alt="Avaliações Icon">Avaliações
           </a>
         </li>
         <li>
-          <a routerLink="relatorios" routerLinkActive="active-link">
+          <a routerLink="reports" routerLinkActive="active-link">
            
             <img src="assets/icons/monitoring.svg" alt="Relatórios Icon">Relatórios
           </a>
